--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "type": "module",
   "engines": {
     "node": ">=22.11.x",
-    "pnpm": ">=9"
+    "pnpm": ">=10"
   },
-  "packageManager": "pnpm@9.13.2",
+  "packageManager": "pnpm@10.7.1",
+  "pnpm": {
+    "neverBuiltDependencies": []
+  },
   "scripts": {
     "dev": "react-router dev",
     "build": "pnpm typegen && react-router build",
