--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "dev": "react-router dev",
     "build": "pnpm typegen && react-router build",
+    "generate-pwa-assets": "pwa-assets-generator",
     "serve": "vite preview",
     "biome:check": "biome check",
     "biome:fix": "pnpm biome:check --write",
@@ -55,6 +56,7 @@
     "@types/node": "^22.15.18",
     "@types/react": "19.1.4",
     "@types/react-dom": "^19.1.5",
+    "@vite-pwa/assets-generator": "^1.0.0",
     "@vitest/coverage-v8": "^3.1.3",
     "@vitest/ui": "^3.1.3",
     "commit-and-tag-version": "^12.5.1",
