--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "lint-staged": "^16.1.2",
     "rollup-plugin-visualizer": "^6.0.3",
     "typescript": "5.8.3",
-    "vite": "^7.0.2",
+    "vite": "npm:rolldown-vite@7.0.5",
     "vite-plugin-checker": "^0.9.3",
     "vite-plugin-pwa": "^1.0.1",
     "vite-tsconfig-paths": "^5.1.4",
