--- a/package.json
+++ b/package.json
@@ -12,16 +12,15 @@
     "neverBuiltDependencies": []
   },
   "scripts": {
-    "dev": "react-router dev",
-    "build": "pnpm typegen && react-router build",
-    "generate-pwa-assets": "pwa-assets-generator",
+    "dev": "vite",
+    "build": "vite build",
     "serve": "vite preview",
+    "generate-pwa-assets": "pwa-assets-generator",
     "biome:check": "biome check --no-errors-on-unmatched --error-on-warnings",
     "biome:fix": "pnpm biome:check --write",
     "biome:ci": "biome ci",
     "turbo": "pnpm dlx turbo@2.5.6",
-    "typegen": "react-router typegen",
-    "type:check": "pnpm typegen && tsc",
+    "type:check": "tsc",
     "test": "vitest run",
     "test:ui": "vitest --ui --coverage",
     "test:coverage": "vitest --coverage run",
@@ -37,13 +36,15 @@
     "@chakra-ui/react": "^3.27.1",
     "@emotion/react": "^11.14.0",
     "@fontsource-variable/plus-jakarta-sans": "^5.2.8",
-    "@react-router/node": "^7.9.4",
-    "isbot": "^5.1.31",
+    "@tanstack/react-devtools": "^0.7.4",
+    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query-devtools": "^5.90.2",
+    "@tanstack/react-router": "^1.132.47",
+    "@tanstack/react-router-devtools": "^1.132.51",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-icons": "^5.5.0",
-    "react-router": "^7.9.4"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.5",
@@ -51,7 +52,7 @@
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
     "@commitlint/types": "^20.0.0",
-    "@react-router/dev": "^7.9.4",
+    "@tanstack/router-plugin": "^1.132.51",
     "@types/node": "^24.7.0",
     "@types/react": "19.2.2",
     "@types/react-dom": "^19.2.1",
