--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "turbo run build",
-  "outputDirectory": "build/client"
+  "buildCommand": "turbo run build"
 }
